Prayer spacing fix

--- a/android/assets/www/css/mobile.css
+++ b/android/assets/www/css/mobile.css
@@ -523,7 +523,7 @@ ul.campus-times .times {
 }
 
 .prayer .details {
-	width: 80%;
+	width: 70%;
 	float: left;
 }
 
@@ -539,7 +539,7 @@ li.prayer {
 }
 
 .prayer .prayed {
-	width: 20%;
+	width: 30%;
 	float: right;
 	margin: 0 auto;
 }
